--- a/wp-content/uploads/elementor/css/post-249.css
+++ b/wp-content/uploads/elementor/css/post-249.css
@@ -1,7 +1,7 @@
 .elementor-249 .elementor-element.elementor-element-102dd049 > .elementor-container {max-width: 980px;min-height: 100px;}
 .elementor-249 .elementor-element.elementor-element-102dd049 > .elementor-container:after {content: "";min-height: inherit;}
 .elementor-249 .elementor-element.elementor-element-102dd049 > .elementor-container > .elementor-row > .elementor-column > .elementor-column-wrap > .elementor-widget-wrap {align-content: center;align-items: center;}
-.elementor-249 .elementor-element.elementor-element-102dd049:not(.elementor-motion-effects-element-type-background), .elementor-249 .elementor-element.elementor-element-102dd049 > .elementor-motion-effects-container > .elementor-motion-effects-layer {background-image: url("https://sajjadraza705.github.io/raza/wp-content/uploads/2020/10/oLB7LnSbLvg.jpg");}
+.elementor-249 .elementor-element.elementor-element-102dd049:not(.elementor-motion-effects-element-type-background), .elementor-249 .elementor-element.elementor-element-102dd049 > .elementor-motion-effects-container > .elementor-motion-effects-layer {background-image: url("https://sajjadraza786.netlify.app/wp-content/uploads/2020/10/oLB7LnSbLvg.jpg");}
 .elementor-249 .elementor-element.elementor-element-102dd049 {transition: background .3s,border .3s,border-radius .3s,box-shadow .3s;}
 .elementor-249 .elementor-element.elementor-element-102dd049 > .elementor-background-overlay {transition: background .3s,border-radius .3s,opacity .3s;}
 .elementor-249 .elementor-element.elementor-element-572f8b6b {--grid-template-columns: repeat(0,auto);--grid-column-gap: 10px;--grid-side-margin: 10px;--grid-row-gap: 0px;--grid-bottom-margin: 0px;}
@@ -9,7 +9,7 @@
 .elementor-249 .elementor-element.elementor-element-572f8b6b .elementor-social-icon {font-size: 17px;padding: .8em;}
 .elementor-249 .elementor-element.elementor-element-822aa22 > .elementor-container {min-height: 550px;}
 .elementor-249 .elementor-element.elementor-element-822aa22 > .elementor-container:after {content: "";min-height: inherit;}
-.elementor-249 .elementor-element.elementor-element-822aa22:not(.elementor-motion-effects-element-type-background), .elementor-249 .elementor-element.elementor-element-822aa22 > .elementor-motion-effects-container > .elementor-motion-effects-layer {background-image: url("https://sajjadraza705.github.io/raza/wp-content/uploads/2020/10/iSulLiXzGg0.jpg");background-position: center center;background-size: cover;}
+.elementor-249 .elementor-element.elementor-element-822aa22:not(.elementor-motion-effects-element-type-background), .elementor-249 .elementor-element.elementor-element-822aa22 > .elementor-motion-effects-container > .elementor-motion-effects-layer {background-image: url("https://sajjadraza786.netlify.app/wp-content/uploads/2020/10/iSulLiXzGg0.jpg");background-position: center center;background-size: cover;}
 .elementor-249 .elementor-element.elementor-element-822aa22 > .elementor-background-overlay {opacity: .25;transition: background .3s,border-radius .3s,opacity .3s;}
 .elementor-249 .elementor-element.elementor-element-822aa22 {transition: background .3s,border .3s,border-radius .3s,box-shadow .3s;}
 .elementor-249 .elementor-element.elementor-element-822aa22 > .elementor-shape-bottom .elementor-shape-fill {fill: #003e53;}
